doc/htmldoc/static/css/custom.css
/* 
 * Customize css to define NEST specific colors, style and format
 *
   primary styles, for custom index.html and layout.html pages (see templates/ folder)
   Author: www.prowebdesign.ro
   Simple Responsive Template v 1.2
   Add your own styles to customize the project.

   Sphinx theme: sphinx-material
   https://bashtage.github.io/sphinx-material/index.html
   Sphinx material theme properties use 'md' in variable names 
   Extesion for grid / cards in reStructured Text see sphinx-design
   https://sphinx-design.readthedocs.io/
   Sphinx design properties use the sd in variable names
 */
/* Define colors*/
:root {
    --nest-orange: #ff6633;
    --nest-blue: #1281B3;
    --nest-green: #36B34F;
    --sd-color-primary: var(--nest-orange);
    --sd-color-primary-highlight: #e05a2d;
    --sd-color-info: var(--nest-blue);
    --sd-color-success: var(--nest-green);
    --sd-color-card-border-hover: var(--nest-blue);
}
/* Define base font color and style */
body{
	background:#fff;
	color:#666;
	font-family: 'Droid Sans', Arial, Helvetica, sans-serif;
	/*font-size: medium;
	line-height:1.5em;
	font-weight:normal;*/
}
h1, h2, h3, h4, h5, h6{
  /*font-size: 1.5em;*/
	font-weight:600;
	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
	/*line-height:1.5em;
	margin:.45em 0;
	padding:0;*/
}

/* Box sizing. Awesome thing. Read about it here: http://www.w3schools.com/cssref/css3_pr_box-sizing.asp */
*{	box-sizing:border-box;
	-moz-box-sizing:border-box;}

/* links */
a {color: var(--nest-orange);}
a:visited,
a:active {color:var(--nest-orange);}
a:hover{color:var(--nest-orange); text-decoration:underline;}

/* set api function and class names style */
.sig.sig-object.py {
   font-weight: bold;
	 background-color: #ffd1c1;
   font-family: "Roboto Mono","Courier New",Courier,monospace;
 }
 /* set the kernelattributes in api  positioning to one line */
dl.py.attribute dd  {
 display: flex;
 align-items: first baseline;
 flex-wrap: wrap;
 gap: 10px;
 margin-left: 0.4em;

}
section#kernel-attributes dl.py.class dd dl.py.attribute dd dl.field-list.simple {
	display: flex;
	align-items: baseline;
}

.sig-prename.descclassname{
  display: none;
}


/**************************************************************************************
 Settings for overriding material design theme 
 Setting nest colors to override sphinx material "orange" and other default colors

**************************************************************************************/
/* To ensure the headings in the theme have same weight as custom index page*/

.md-typeset h1,
.md-typeset h2,
.md-typeset h3,
.md-typeset h4,
.md-typeset h5,
.md-typeset h6 {
   font-weight: 600;
}
.md-typeset h1[id]:before,
.md-typeset h2[id]:before, 
.md-typeset h3[id]:before,
.md-typeset h4[id]:before {
   margin-top: -3.4rem;
  padding-top: 3.4rem;
}

[data-md-color-primary=orange] .md-tabs {
  background-color: var(--nest-orange);
 }

/* To add matching styling for the header in index.html */
div[role="main"] .md-header {
  background-color: var(--nest-orange);
  scale: 140%;
  padding-top: 0.3rem;
  height: 2.6rem;
	transition: background-color .25s,color .25s,box-shadow .25s;
	box-shadow: 0 0 .2rem rgba(0,0,0,.1),0 .2rem .4rem rgba(0,0,0,.2);
}

div[role="main"] .md-source {
    display: none;
}


[data-md-color-primary="orange"] .md-header, [data-md-color-primary="orange"] .md-hero {
  background-color: var(--nest-orange);
}
[data-md-color-primary="orange"] .md-nav__link--active, [data-md-color-primary="orange"] .md-nav__link:active {
	color: var(--nest-orange);
}
[data-md-color-primary="orange"] .md-typeset a {
  color: var(--nest-orange);
}
.md-typeset details {
   background-color: white;
}
.md-typeset summary::after {
  display: none;
}
.md-typeset details > summary::before {
  display: none;
}

/* settings for icons */
.md-typeset .sd-card-title img {
  border: none;
  opacity: 0.75;
  width: 64px;
  height: auto;
  margin-right: 0.7em;
}
div.sd-card-title.sd-font-weight-bold.sd-d-flex-row.docutils a.reference.internal img {
 margin-right: 2em;
 margin-bottom: 0.5em;
 
}

.md-typeset .admonition {
  border-left: .2rem solid var(--nest-blue);
  border-radius: 5px;
}

.md-typeset .admonition > .admonition-title::before, .md-typeset .admonition.important > .admonition-title::before {
  color: #fff;
}
.md-typeset .admonition > .admonition-title{
  background-color: var(--nest-blue);
  color: #fff;
}
.md-typeset .admonition {
   background-color: #fff;
   box-shadow: 0 .125rem .25rem var(--sd-color-shadow);
   margin-left: 17px;
   margin-right: 15px;
}
.md-typeset .admonition.seealso > .admonition-title, .md-typeset .admonition.important > .admonition-title {
   background-color: var(--nest-green);
}
.md-typeset .admonition.seealso, .md-typeset .admonition.important {
  border-left: .2rem solid var(--nest-green);
}
.md-typeset .admonition.warning {
   border-left-color: #be1717;
} 
.md-typeset .admonition.warning > .admonition-title {
   background-color: #be1717;
}
.md-typeset .admonition.danger > .admonition-title {
   background-color: black;
}
/* add admonition warning / info (?) */
.md-nav__extra_link{
  color: var(--nest-orange);
}
div.admonition .md-typeset a > code {
	color: white;
}
.md-nav__link, .md-nav__link:focus, .md-nav__link:hover {
	color: var(--nest-orange);
}

ul.md-tabs__list li.md-tabs__item a.md-tabs__link {
 color: #fff;
 opacity:0.9;
}
a.md-tabs__link, a.md-source {
  color: #fff;
}
div.md-header-nav__source a.md-source div.md-source__repository, div.md-source__icon{
  color: #fff;
}

/*remove logo from header */
.md-header-nav__button {
  display: none;
}
/* remove space between the md_tabs bar and the header section */
.md-container {
 padding-top: 0px;
}


/***********************************
 * Adjust settings for sphinx design
 * *********************************/
.sd-card-header .sd-card-text {
  color: white;
  text-align: center;
}
#pynest-examples img.sd-card-img-top {
  width: auto;
  height: max-content;
}
/* ... */

